2005-10-06  Elijah Newren  <newren@gmail.com>

	* src/boxes.c
	(meta_rectangle_get_minimal_spanning_set_for_region): note new
	meta_rectangle_free_spanning_set() function in comment,

	* src/boxes.[ch] (meta_rectangle_free_spanning_set): new function
	to deallocate memory allocated by
	meta_rectangle_get_minimal_spanning_set_for_region()

	* src/constraints.c (update_onscreen_requirements): new function,
	(meta_window_constrain): call update_onscreen_requirements(),
	(get_screen_relative_spanning_rects): new function factored out
	from constrain_fully_onscreen() and
	constrain_partially_onscreen(), (constrain_fully_onscreen,
	constrain_partially_onscreen): make use of new
	get_screen_relative_spanning_rects() and
	meta_rectangle_free_spanning_set()

2005-10-04  Elijah Newren  <newren@gmail.com>

	* src/Makefile.am: include boxes.[ch]

	* src/constraints.c (constrain_partially_onscreen): do the rest of
	the implementation of this function, other than handling amount
	offscreen that user resize operations are allowed

	* src/window.h (struct _MetaWindow): add require_fully_onscreen
	and require_on_single_xinerama flags

	* src/window.c (meta_window_new_with_attrs): intialize
	require_fully_onscreen and require_on_single_xinerama flags for
	the window

	* src/boxes.[ch]:
	* src/constraints.[ch]:
	* src/window.[ch]:
	* src/display.h:
	Massive changes all over the place to make everything compile.  No
	it doesn't work, and don't worry, I'll break the compilation again
	soon.

2005-10-04  Elijah Newren  <newren@gmail.com>

	Finally got the onscreen constraint written, minus the need for
	setting the require_fully_onscreen flag.

	* constraints-ideas.txt: minor clarification; mark one section as
	done

	* src/boxes.[ch]
	(meta_rectangle_get_minimal_spanning_set_for_region): clarify what
	the region is in the comments,
	(meta_rectangle_could_be_contained_in_region,
	meta_rectangle_contained_in_region,
	meta_rectangle_clamp_to_fit_into_region,